test/resources/case1_audit_from_cache/namespaceSelector/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: case1-ns-test-pod
  namespace: ns1
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: case1-ns-test-pod
  namespace: ns2
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: case1-ns-test-pod
  namespace: ns3
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
