test/resources/case1_audit_from_cache/namespaceSelector/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: case1namespaceselector
spec:
  crd:
    spec:
      names:
        kind: Case1NamespaceSelector
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package case1namespaceselector

        violation[{"msg": msg}] {
          1 > 0
          msg := sprintf("This is namespaceSelector test %v",["hi"])
        }
